manifests/environments/yt01/apps/bff/deployment-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff
spec:
  template:
    spec:
      containers:
        - name: bff
          resources:
            requests:
              cpu: "1"
              memory: 2Gi
            limits:
              cpu: "1"
              memory: 2Gi
