manifests/environments/yt01/apps/bff/ingress-hostname.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bff
spec:
  hostnames:
    - arbeidsflate.yt01.dis-core.altinn.cloud
